archive/kubernetes-definitions/monitoring/prometheus.yaml

# Service
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - name: "http"
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
