archive/kubernetes-definitions/monitoring/grafana.yaml

# Grafana
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      namespace: monitoring
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:5.1.4
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-dashboards-providers
          mountPath: /etc/grafana/provisioning/dashboards
        - name: grafana-dashboards-common
          mountPath: /grafana-dashboards-common
        - name: grafana-dashboards-chains
          mountPath: /grafana-dashboards-chains
        - name: grafana-dashboards-exchanges
          mountPath: /grafana-dashboards-exchanges
        - name: grafana-dashboards-cluster
          mountPath: /grafana-dashboards-cluster
        - name: grafana-data
          mountPath: /var/lib/grafana
        ports:
        - name: web
          containerPort: 3000
        resources:
          requests:
            memory: "300Mi"
            cpu: "0.1"
          limits:
            memory: "500Mi"
            cpu: "0.3"
      volumes:
      - name: grafana-datasources
        configMap:
          name: grafana-datasources
      - name: grafana-dashboards-providers
        configMap:
          name: grafana-dashboards-providers
      - name: grafana-dashboards-common
        configMap:
          name: grafana-dashboards-common
      - name: grafana-dashboards-chains
        configMap:
          name: grafana-dashboards-chains
      - name: grafana-dashboards-exchanges
        configMap:
          name: grafana-dashboards-exchanges
      - name: grafana-dashboards-cluster
        configMap:
          name: grafana-dashboards-cluster
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
---
# Grafana Service
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - name: "web"
    port: 80
    targetPort: 3000
  selector:
    app: grafana

---
# Grafana Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
spec:
  rules:
  - host: cybersearch.live
    http:
      paths:
      - path: /*
        backend:
          serviceName: grafana
          servicePort: 80
  tls:
  - secretName: grafana-prod-crt
    hosts:
    - cybersearch.live
